apps/qbittorrent/overlays/nishir/patch-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: lidarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: whisparr
      ports:
        - port: https
          protocol: TCP
